--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>3.0</version>
     <modules>
         <module>chapter001</module>
+        <module>chapter_002</module>
     </modules>
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
